# query-plugins

./: Readme.md  cargo.toml
query-common/: Cargo.toml
query-common/src/: lib.rs
query-runner/: Cargo.toml  query-common.wai  query.wai
query-runner-app/: package-lock.json  package.json
query-runner-app/public/: index.html
query-runner-app/src/: App.css  App.tsx  index.tsx
query-runner-app/src/components/: ConnectionList.tsx  Home.tsx  Plugin.tsx  PluginList.tsx  QueryResults.tsx
query-runner-app/src/services/: ConnectionService.ts  PluginService.ts
query-runner-app/src/types/: Connection.ts  Plugin.ts
query-runner-bin/: Cargo.toml
query-runner-bin/src/: main.rs
query-runner-server/: Cargo.toml
query-runner-server/config/: connections.yaml
query-runner-server/plugins/: test_collect.wasm  test_collect2.wasm
query-runner-server/src/: lib.rs  main.rs
query-runner-server/tests/: config.rs  running.rs
query-runner/config/: connections.yaml
query-runner/plugins/: test_collect.wasm  test_collect2.wasm
query-runner/src/: config.rs  lib.rs  main.rs  parse.rs  postgres.rs  sqlite.rs
query-runner/tests/: config.rs  running.rs
query-runner/tests/data/: postgres.sql
test-collect/: Cargo.toml  query-common.wai  query.wai
test-collect/src/: lib.rs
test-collect2/: Cargo.toml  query-common.wai
test-collect2/src/: lib.rs
