[package]
name = "query-runner-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
query-runner = { version = "0.1.0", path = "../query-runner" }
pretty_assertions = "1.3.0"
tower-http = { version = "0.4.0", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
mime = "0.3.17"
