[package]
name = "query-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
llvm-sys = "140.0.5"
wasmer = "3.2.0-beta.2"
wasmer-compiler-llvm = "3.2.0-beta.2"
wai-bindgen-wasmer = {version ="0.2.5", features= ["sys"] }
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
rusqlite = { version = "0.29.0", features = ["column_decltype"] }
wasmer-compiler = "3.2.0-beta.2"
tabled = "0.11.1"
tokio-postgres = "0.7.8"
futures-util = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
pin-project = "1.0.12"
